--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@splidejs/react-splide": "^0.7.12",
+    "@vitalets/google-translate-api": "^9.2.1",
     "apollo-server-micro": "^3.13.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -22,13 +23,16 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.515.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
+    "openai": "^5.22.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.8",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
