--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "swiper": "^11.2.8",
     "uuid": "^11.1.0",
     "web-push": "^3.6.7"
